--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-<html><body style="background-color: powderblue;>"
+<html>
+    <style>
+        body {
+          width: 100px;
+          height: 100px;
+          background-color: red;
+          animation-name: example;
+          animation-duration: 4s;
+          animation-iteration-count: infinite;
+        }
+        
+        @keyframes example {
+          0%   {background-color: red;}
+          25%  {background-color: yellow;}
+          50%  {background-color: blue;}
+          100% {background-color: green;}
+        }
+        </style>
+    
+
+
+<body style="background-color: powderblue;>"
     <h1>GitHUB Demo1</h1>
 </body></html>
